properly name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vconsol-axois-lib",
+  "name": "vconsol-axios-lib",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
